--- a/apps/portfolio/src/index.html
+++ b/apps/portfolio/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <portfolio-root></portfolio-root>
+    <csu-portfolio-root></csu-portfolio-root>
   </body>
 </html>
